--- a/css/styles.css
+++ b/css/styles.css
@@ -397,6 +397,7 @@ font-weight: normal;
 .bestsellers {
   margin: 0 auto;
   width: 1161px;
+  position: relative;
 }
 .first-slider,
 .second-slider,
@@ -459,24 +460,33 @@ font-weight: normal;
   margin-bottom: 25px;
   width: 560px;
 }
+
+.button-container{
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  left: 0;
+  top:25%;
+  width: 560px;
+}
 .slider-prev{
   background-color: transparent;
-  border: 5px solid red;
   width: 20px;
   height:60px ;
   cursor: pointer;
-  margin-right: 30px;
+  border: none;
 }
 .slider-icon{
   fill: black;
+  margin-top: 0;
 }
 .slider-next{
   background-color: transparent;
-  border: 5px solid red;
   width: 20px;
   height:60px ;
   transform: rotate(180deg);
   cursor: pointer;
+  border: none;
 }
 .slider-button-move:hover .slider-icon{
   fill:rgba(0, 0, 0, 0.705)
@@ -494,9 +504,13 @@ height: 80px;
 .slider-button-move:active {
   border: none;
 }
+.slider-pagination-container{
+  position: absolute;
+}
 .slider-button{
   position: relative;
   width: 220px;
+  order:1;
 }
 .slider-button::after {
   position: absolute;
@@ -507,7 +521,7 @@ height: 80px;
   width: 100%;
   height: 100%;
   z-index: -1;
-  transform: scale(1, 0.4);
+  transform: scale(1, 0.3);
 }
 .slider-button:focus::after {
   background: #af4fff;
@@ -527,6 +541,13 @@ height: 80px;
 .slider-button:active::after {
   opacity: 0.3;
 }
+.slider-pagination-container{
+  width: 560px;
+  display: flex;
+  justify-content: space-between;
+  left:50%;
+  top:50%
+}
 .slider-pagination{
   display: flex;
   flex-wrap: wrap;
@@ -534,9 +555,13 @@ height: 80px;
   margin: 0;
   padding: 0;
   list-style-type: none;
+  order: 2;
 }
 .slider-pagination-item{
   margin-right: 22px;
+  width: 12px;
+  height: 12px;
+  padding: 0;
 }
 .slider-pagination-button{
   width: 12px;
@@ -545,6 +570,7 @@ background-color: transparent;
 border: 2px solid #000;
 border-radius: 50%;
 cursor: pointer;
+padding: 0;
 }
 .slider-pagination-button:hover{
   background-color: transparent;
