--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ font-weight: normal;
 .header-search:not(:placeholder-shown) + .button-search:active {
   background: #000000;
   color: rgba(220, 220, 220, 0.3);
+  border-color:#000
 }
 .header-search:focus {
   border: 2px solid #af4fff;
@@ -188,14 +189,14 @@ font-weight: normal;
   height:max-content;
   margin-bottom: 26px;
 }
-/* .navigation-header button {
+.button-search {
   background-color: transparent;
   border: 0;
   margin: 0;
   padding: 0;
   margin-top: auto;
   margin-bottom: auto;
-} */
+}
 
 .navigation-link {
   display: block;
@@ -293,7 +294,7 @@ background: #000000;
 box-shadow: 0px 10px 0px rgba(0, 0, 0, 0.1);
 padding: 0;
 z-index: 3;
-display: none;
+/* display: none; */
 }
 .popover::before{
   position: absolute;
@@ -322,12 +323,17 @@ z-index: 3;
 .cart-items-list{
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 .cart-item{
   display: flex;
   align-items: center;
   padding-left: 20px;
-
+}
+.cart-link-title{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
 }
 .cart-item:nth-child(1){
   border-bottom: 1px solid rgba(255, 255, 255, 0.1)
@@ -344,9 +350,30 @@ text-align: start;
 margin-left: 23px;
 margin-right: 35px;
 }
+.cart-link-title:focus .product-cart-image{
+  border: 5px solid #AF4FFF;
+}
+.cart-link-title:focus .cart-item-title{
+  color: #AF4FFF;
+}
+.cart-link-title:hover .product-cart-image{
+  opacity: 0.6;
+  border:none
+}
+.cart-link-title:hover .cart-item-title{
+  opacity: 0.6;
+}
+
+.cart-link-title:active .product-cart-image{
+  opacity: 0.3;
+  border:none
+}
+.cart-link-title:active .cart-item-title{
+  opacity: 0.3;
+  color: rgba(220, 220, 220, 0.6)
+}
+
 .cart-item-button{
-  width: 11px;
-  height: 11px;
   position: relative;
   background-color: transparent;
   outline: none;
@@ -357,17 +384,39 @@ margin-right: 35px;
 .cart-item-button::after{
   position: absolute;
 height: 1px;
-width: 11px;
+width: 15px;
 content: "";
 background-color: white;
-top: 7px;
-left: 2px;
+top: 50%;
+left: 15%;
 }
 .cart-item-button::before{
 transform: rotate(45deg);}
 .cart-item-button::after{
   transform: rotate(-45deg);
 }
+.cart-item-button:hover:before{
+  background-color: rgba(138, 138, 138, 0.719)
+}
+.cart-item-button:hover:after{
+  background-color: rgba(138, 138, 138, 0.719)
+}
+.cart-item-button:focus{
+  border: 2px solid #AF4FFF;
+  width: 25px;
+height: 25px;
+border-radius: 50%;
+}
+.cart-item-button:active:before{
+  background-color: rgba(255, 255, 255, 0.205)
+}
+.cart-item-button:active:after{
+  background-color: rgba(255, 255, 255, 0.205)
+}
+.cart-item-button:active{
+  border: none;
+}
+
 .cart-price{
   display: flex;
   justify-content: space-between;
@@ -396,6 +445,19 @@ border: none;
 cursor: pointer;
 margin-top: 20px;
 margin-bottom: 21px;
+}
+.cart-open:hover{
+  background-color: #FFE17F;
+}
+.cart-open:focus{
+  border: 5px solid #AF4FFF;
+  box-sizing: content-box;
+  background-color: white;
+}
+.cart-open:active{
+  background-color: #FFE17F;
+  color: rgba(138, 138, 138, 0.418);
+  border:none;
 }
 .navigation-services {
   display: flex;
