--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,12 @@ body {
   flex-direction: column;
   margin-top: 40px;
 }
+.main-header-index{
+  padding-bottom: 167px;
+}
+.main-header-catalog{
+  padding-bottom: 53px;
+}
 .device-logo {
   margin-left: 60px;
   margin-top: -23px;
@@ -203,15 +209,21 @@ body {
   color: #000000;
   font-size: 16px;
   text-decoration: none;
-  margin-left: 0;
   height: 100%;
+  border: 2px solid #FFE17F;;
+  border-radius: 20px;
+  padding-left: 17px;
+  padding-right: 21px;
+  width: max-content;
+}
+.exit-link{
+  opacity: 0.3;
 }
 .navigation-link:hover {
   opacity: 0.6;
 }
-.navigation-item .navigation-link:focus {
-  border: 2px solid #af4fff;
-  border-radius: 20px;
+.navigation-link:focus {
+  border-color:#af4fff;
 }
 
 .navigation-link:active {
@@ -246,27 +258,18 @@ body {
   width: 555px;
   margin: 0;
   padding-left: 0;
+  justify-content: space-between;
 }
-.navigation-item:nth-child(1) {
-  text-align: center;
-  width: 117px;
-  margin-right: 153px;
+.user-item{
+  margin-right: 133px;
 }
-.navigation-item:nth-child(2) {
-  text-align: center;
-  width: 136px;
-  margin-right: 5px;
-}
-.quantity {
+.card-item::before {
   background-color: white;
   width: 21px;
   height: 21px;
   border-radius: 50%;
-  text-align: center;
-  font-size: 14px;
-  line-height: 1.6em;
-  position: relative;
-  right: -24px;
+  content: "2";
+  position: absolute;
   font-family: Rubik;
   font-style: normal;
   font-weight: normal;
@@ -276,16 +279,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  top:15%;
+  left:5%;
 }
-.navigation-item:nth-child(4) {
+.card-item {
   position: relative;
   text-align: center;
-  width: 131px;
 }
 .popover {
   position: absolute;
   top: 33px;
-  left: -111%;
+  left: -109%;
   z-index: 1;
   box-sizing: border-box;
   width: 320px;
@@ -312,7 +316,7 @@ body {
   border: none;
   position: absolute;
   top: -28px;
-  left: 146px;
+  left: 157px;
   font-family: Rubik;
   font-style: normal;
   font-weight: normal;
@@ -463,7 +467,7 @@ body {
 .navigation-services {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-start;
   list-style-type: none;
   padding-left: 0;
   padding-right: 0;
@@ -478,8 +482,8 @@ body {
   border: none;
 }
 .navigation-item-element:nth-child(1) {
-  margin-right: 265px;
   position: relative;
+  margin-right: 266px;
 }
 .navigation-item-element:nth-child(1)::before {
   position: absolute;
@@ -488,7 +492,7 @@ body {
   content: "";
   border: 2px solid #000000;
   border-radius: 50%;
-  left: 265px;
+  left: 270px;
   top: -12px;
   background-image: url("../img/plus.svg");
   background-repeat: no-repeat;
@@ -533,17 +537,28 @@ body {
   text-align: right;
 }
 
+.navigation-catalog{
+  position: absolute;
+  width: 1160px;
+  left: -40px;
+  top:43px ;
+  padding-bottom: 50px;
+  padding-top: 33px;
+  background-color: #FFE17F;
+  z-index: 3;
+  display: none;
+}
+.navigation-item-element:nth-child(1):hover  .navigation-catalog{
+display: block;
+}
 .link-list {
   display: grid;
-  grid-template-columns: 220px 150px 200px;
+  grid-template-columns: 220px 150px min-content;
   grid-template-rows: 18px 18px 18px;
   padding: 0;
-  margin-left: 42px;
-  margin-bottom: 54px;
-  margin-top: 35px;
   row-gap: 25px;
   column-gap: 29px;
-  width: 1160px;
+  margin-left: 45px;
 }
 .link-list-item:nth-child(2) {
   grid-column: 1/2;
@@ -580,11 +595,17 @@ body {
   border: none;
   opacity: 0.3;
 }
+.main-index{
+  margin-top: -149px;
+}
 /* слайдер */
 .bestsellers {
   margin: 0 auto;
   width: 1161px;
   position: relative;
+}
+.slide-description{
+  padding-top: 70px;
 }
 .first-slider,
 .second-slider,
@@ -593,6 +614,7 @@ body {
   width: 1161px;
   margin: 0 auto;
   position: relative;
+  z-index: 2;
 }
 .first-slider::before {
   position: absolute;
@@ -604,8 +626,9 @@ body {
   font-weight: 800;
   font-size: 180px;
   line-height: 30px;
-  top: -70px;
+  top: 80px;
   left: 887px;
+  z-index: -1;
 }
 .second-slider::before {
   position: absolute;
@@ -617,8 +640,9 @@ body {
   font-weight: 800;
   font-size: 180px;
   line-height: 30px;
-  top: -70px;
+  top: 80px;
   left: 887px;
+  z-index: -1;
 }
 .third-slider::before {
   position: absolute;
@@ -630,8 +654,9 @@ body {
   font-weight: 800;
   font-size: 180px;
   line-height: 30px;
-  top: -70px;
+  top: 80px;
   left: 887px;
+  z-index: -1;
 }
 .second-slider,
 .third-slider {
@@ -646,6 +671,7 @@ body {
   margin-top: 121px;
   margin-bottom: 25px;
   width: 560px;
+  z-index: 3;
 }
 
 .button-container {
@@ -653,8 +679,9 @@ body {
   display: flex;
   justify-content: space-between;
   left: 0;
-  top: 25%;
+  top: 45%;
   width: 560px;
+  z-index: 5;
 }
 .slider-prev {
   background-color: transparent;
@@ -662,6 +689,7 @@ body {
   height: 60px;
   cursor: pointer;
   border: none;
+  z-index: 5;
 }
 .slider-icon {
   fill: black;
@@ -674,6 +702,7 @@ body {
   transform: rotate(180deg);
   cursor: pointer;
   border: none;
+  z-index: 5;
 }
 .slider-button-move:hover .slider-icon {
   fill: rgba(0, 0, 0, 0.705);
@@ -691,13 +720,11 @@ body {
 .slider-button-move:active {
   border: none;
 }
-.slider-pagination-container {
-  position: absolute;
-}
 .slider-button {
   position: relative;
   width: 220px;
   order: 1;
+  z-index: 5;
 }
 .slider-button::after {
   position: absolute;
@@ -733,7 +760,9 @@ body {
   display: flex;
   justify-content: space-between;
   left: 50%;
-  top: 50%;
+  top: 65%;
+  position: absolute;
+  z-index: 5;
 }
 .slider-pagination {
   display: flex;
@@ -743,12 +772,15 @@ body {
   padding: 0;
   list-style-type: none;
   order: 2;
+  align-items: center;
 }
 .slider-pagination-item {
   margin-right: 22px;
   width: 12px;
   height: 12px;
   padding: 0;
+  display: flex;
+  align-items: center;
 }
 .slider-pagination-button {
   width: 12px;
