--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 .button {
   font-family: Raleway, sans-serif;
   font-weight: 800;
@@ -116,6 +117,7 @@ body {
   font-family: Rubik;
   font-style: normal;
   font-weight: normal;
+  
 }
 .button-search {
   width: 160px;
@@ -194,6 +196,7 @@ body {
   padding: 0;
   height: max-content;
   margin-bottom: 26px;
+  width: 145px;
 }
 .button-search {
   background-color: transparent;
@@ -235,14 +238,7 @@ body {
 }
 .navigation-element,
 .footer-navigation-link {
-  font-family: Raleway, sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 21px;
-  text-decoration: none;
   color: #000000;
-  text-transform: uppercase;
-  letter-spacing: 0.2em;
 }
 
 .navigation {
@@ -270,7 +266,6 @@ body {
   border-radius: 50%;
   content: "2";
   position: absolute;
-  font-family: Rubik;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -317,7 +312,6 @@ body {
   position: absolute;
   top: -28px;
   left: 157px;
-  font-family: Rubik;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -344,7 +338,6 @@ body {
 }
 .cart-item-title {
   width: 170px;
-  font-family: Rubik;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -425,7 +418,6 @@ body {
 .cart-price {
   display: flex;
   justify-content: space-between;
-  font-family: Rubik;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -439,13 +431,6 @@ body {
   background-color: white;
   width: 280px;
   height: 50px;
-  font-family: Raleway;
-  font-style: normal;
-  font-size: 18px;
-  line-height: 21px;
-  text-align: center;
-  letter-spacing: 0.2em;
-  text-transform: uppercase;
   border: none;
   cursor: pointer;
   margin-top: 20px;
@@ -1096,13 +1081,7 @@ display: block;
   cursor: pointer;
 }
 .order {
-  font-family: Raleway, sans-serif;
-  font-weight: 800;
-  font-size: 18px;
   line-height: 23px;
-  color: #000000;
-  letter-spacing: 0.2em;
-  text-transform: uppercase;
   background-repeat: no-repeat;
   background-position: right;
   background-size: 47px 31px;
@@ -1242,7 +1221,7 @@ display: block;
   margin: 0;
 }
 .field:focus {
-  background: #dcdcdc;
+  background-color: #dcdcdc;
 }
 .field:hover {
   border-bottom: 3px solid rgba(0, 0, 0, 0.205);
@@ -1251,9 +1230,9 @@ display: block;
   background: transparent;
   border-bottom: 3px solid #000000;
 }
-.field[type="email"]:invalid {
+.field:focus:invalid {
   border-bottom: 3px solid #ff3d3d;
-  background-color: transparent;
+  background-color: #F0F0F0;
 }
 .newsletter-form {
   grid-column: 1/3;
@@ -1318,7 +1297,6 @@ display: block;
   color: #000000;
   text-decoration: none;
 }
-
 .contacts-subtitle {
   font-weight: 700;
   font-size: 24px;
@@ -1675,7 +1653,6 @@ display: block;
   border: black;
 }
 .catalog-filter-label {
-  font-family: Rubik;
   font-style: normal;
   font-weight: normal;
   font-size: 15px;
@@ -1907,14 +1884,7 @@ display: block;
 .pagination-show-more,
 .pagination-prev,
 .pagination-next {
-  font-family: Raleway;
-  font-weight: 800;
   font-size: 16px;
-  line-height: 19px;
-  letter-spacing: 0.2em;
-  color: #000000;
-  text-decoration: none;
-  text-transform: uppercase;
 }
 
 .pagination-link {
@@ -2017,6 +1987,22 @@ display: block;
 /* футер */
 .page-footer {
   background-color: #444444;
+  padding-top: 137px;
+  padding-bottom: 61px;
+}
+.footer-container {
+  max-width: 1160px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+}
+.footer-device-logo{
+  width: 145px;
+  height: 36px;
+  position: absolute;
+  top: -146px;
+  left: 0;
 }
 .footer-contacts-address-text {
   width: 248px;
@@ -2105,15 +2091,7 @@ display: block;
   margin-right: auto;
 }
 /* социальные сети  */
-.footer-social-icon {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  fill: #444444;
-}
+
 .footer-social-list {
   display: flex;
   flex-wrap: wrap;
@@ -2148,6 +2126,15 @@ display: block;
   width: 40px;
   height: 40px;
   border: none;
+}
+.footer-social-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  fill: #444444;
 }
 .footer-social-link:active {
   background: #ffc700;
@@ -2201,6 +2188,7 @@ display: block;
   fill: rgba(138, 138, 138, 0.418);
 }
 /* Модальное окно */
+
 .modal-container {
   position: fixed;
   top: 0;
@@ -2209,7 +2197,7 @@ display: block;
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.87);
-  z-index: 4;
+  z-index: 7;
   display: none;
 }
 .modal-content {
@@ -2308,7 +2296,6 @@ display: block;
   left: 90%;
 }
 .modal-subtext-name {
-  font-family: Rubik;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -2316,7 +2303,6 @@ display: block;
   color: #ff3d3d;
 }
 .modal-subtext-email {
-  font-family: Rubik;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -2324,7 +2310,6 @@ display: block;
   color: #000;
 }
 .modal-subtext-email-change {
-  font-family: Rubik;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -2337,7 +2322,7 @@ display: block;
   padding-left: 20px;
   padding-top: 24px;
   padding-bottom: 24px;
-  font-family: Rubik;
+  font-family: inherit;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -2408,7 +2393,6 @@ display: block;
   flex-direction: column;
 }
 .modal-field {
-  font-family: Rubik;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
@@ -2496,7 +2480,7 @@ display: block;
   text-align: start;
   box-shadow: 0px 10px 0px rgba(0, 0, 0, 0.1);
   z-index: 4;
-  display: none;
+  /* display: none; */
 }
 .modal-info:hover .popover-modal-text {
   display: block;
